fix gaps between flex items

--- a/src/Components/Products/ProductWrapper.css
+++ b/src/Components/Products/ProductWrapper.css
@@ -9,5 +9,5 @@
   border-radius: 8px;
   margin: 30px;
   width: 100%;
-  gap: 8%;
+  gap: 50px 8%;
 }
